kubernetes/apps/tools/gotify/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: tools
  labels:
    app: gotify
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: web
  selector:
    app: gotify
